# git_note

./: .gitignore
.github/workflows/: release.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: App.css  App.tsx  store.init.test.ts  store.test.ts  store.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config.rs  lib.rs
app/src-tauri/src/auth/: mod.rs
app/src-tauri/src/gdrive/: mod.rs
app/src-tauri/src/git_core/: error.rs  mod.rs  repo.rs
app/src-tauri/src/sync/: mod.rs
app/src-tauri/src/update/: mod.rs
app/src-tauri/src/vault/: mod.rs
app/src/components/: Connections.tsx  Dialog.tsx  Editor.tsx  ErrorBoundary.tsx  LoginModal.tsx  Outline.tsx  Preview.tsx  QuickOpen.tsx  SettingsModal.tsx  Sidebar.tsx  StatsModal.tsx  TagBrowser.tsx  TreeView.tsx
app/src/lib/: api.test.ts  api.ts  markdown.test.ts  markdown.ts  text.test.ts  text.ts  themes.test.ts  themes.ts  tree.test.ts  tree.ts  useMediaQuery.test.ts  useMediaQuery.ts
app/src/test/: setup.ts
docs/: android-build.md  updater-setup.md
docs/superpowers/plans/: 2026-06-20-git-note-foundation.md
docs/superpowers/specs/: 2026-06-20-git-note-app-design.md
